[gd_scene load_steps=3 format=3 uid="uid://bkgihvpipl64u"]

[ext_resource type="Script" path="res://model/IIROSEChat/iirose_chat.gd" id="1_l23bs"]
[ext_resource type="PackedScene" uid="uid://bofs37ukskcud" path="res://model/IIROSEChat/ChatControl.tscn" id="2_uw38x"]

[node name="IiroseChat" type="Window"]
initial_position = 1
size = Vector2i(1152, 648)
script = ExtResource("1_l23bs")

[node name="ChatControl" parent="." instance=ExtResource("2_uw38x")]
unique_name_in_owner = true

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
